--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,169 @@
-body {
-    background-color: #F2F1E8;
-}
-
-h1 {
-    font-family: 'Merriweather', serif;
-    font-size: 3em;
-    text-align: center;
-    font-weight: normal;
-}
-
-h2 {
-    font-family: 'Merriweather', serif;
-    font-size: 2em;
-    text-align: center;
-    font-weight: lighter;
-}
-
-#topnav {
-    display: flex;
-    justify-content: space-between;
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #FFFFFF;
-}
-
-#topnav a {
-    display: flex;
-    align-items: space-around;
-    justify-content: center;
-    height: 40px;
-    width: 40px;
-    padding: 20px;
-    color: #2B2F26;
-    font-size: 20px;
-    text-decoration: underline;
-    text-transform: uppercase;
-}
-
-#topnav img {
-    height: 50%;
-    width: 50%
-}
-
-.nav-links {
-    width: 33%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.wrap-around {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.image20 {
-    width: 20%;
-}
-
-.image40 {
-    width: 40%;
-}
-
-.image60 {
-    width: 45%;
-    height:
-}
+    * {
+        box-sizing: border-box;
+    }
+    
+    body {
+        background-color: #F2F1E8;
+        font-family: 'Merriweather', serif;
+        margin: 0 auto;
+    }
+    
+    .wrapper {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .logo1 {
+        background-image: url("./images/bent-creek-logo.png");
+        background-size: cover;
+        width: 45px;
+        height: 45px;
+        margin-top: 12px;
+        margin-bottom: 10px;
+        margin-left: 15px;
+        /* margin-right: 50px; */
+        display: flex;
+        align-items: flex-start;
+    }
+    
+    #topnav {
+        background-color: #ffffff;
+        width: 100%;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        flex: 1;
+    }
+    
+    .nav-links {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: center;
+        flex: 1;
+    }
+    
+    .nav-links a {
+        padding: 0 70px 0 20px;
+        font-size: 18px;
+        color: #2B2F26;
+    }
+    
+    h1 {
+        font-family: 'Merriweather', serif;
+        font-size: 3em;
+        text-align: center;
+        font-weight: normal;
+    }
+    
+    h2 {
+        font-family: 'Merriweather', serif;
+        * font-size: 2em;
+        text-align: center;
+        font-weight: lighter;
+    }
+    
+    section {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .image1 {
+        background-image: url("./images/product-1.jpg");
+        height: 368px;
+        width: 48%;
+        flex-grow: 3;
+        background-size: cover;
+        background-position: center;
+        margin: 8px;
+        padding-top: 280px;
+    }
+    
+    .image2 {
+        background-image: url("./images/product-2.jpg");
+        height: 368px;
+        width: 16%;
+        flex-grow: 1;
+        background-size: cover;
+        background-position: center;
+        margin: 8px;
+        padding-top: 280px;
+    }
+    
+    .image3 {
+        background-image: url("./images/product-3.jpg");
+        height: 368px;
+        width: 16%;
+        flex-grow: 1;
+        background-size: cover;
+        background-position: center;
+        margin: 8px;
+        padding-top: 280px;
+    }
+    
+    .image4 {
+        background-image: url("./images/product-4.jpg");
+        height: 242px;
+        width: 16%;
+        flex-grow: 1;
+        background-size: cover;
+        margin: 8px;
+        padding-top: 153px;
+    }
+    
+    .image5 {
+        background-image: url("./images/product-5.jpg");
+        height: 242px;
+        width: 16%;
+        flex-grow: 1;
+        background-size: cover;
+        margin: 8px;
+        padding-top: 153px;
+    }
+    
+    .image6 {
+        background-image: url("./images/product-6.jpg");
+        height: 242px;
+        width: 32%;
+        flex-grow: 2;
+        background-size: cover;
+        margin: 8px;
+        padding-top: 153px;
+    }
+    
+    .image7 {
+        background-image: url("./images/product-7.jpg");
+        height: 242px;
+        width: 16%;
+        flex-grow: 1;
+        background-size: cover;
+        margin: 8px;
+        padding-top: 153px;
+    }
+    
+    footer {
+        background-color: #2B2F26;
+        height: 100px;
+        padding-top: 20px;
+        padding-left: 25px;
+    }
+    
+    span {
+        margin-bottom: 0;
+        color: #F2F1E8;
+        font-family: 'Merriweather', serif;
+        font-size: 19px;
+        font-weight: lighter;
+    }
+    
+    p {
+        display: inline-block;
+        background-color: #2B2F26;
+        height: 53px;
+        padding-top: 13px;
+        padding-left: 15px;
+        padding-right: 15px;
+        color: #F2F1E8;
+        font-family: 'Merriweather', serif;
+        font-size: 19px;
+    }
